# CG

./: .gitignore  CMakeLists.txt  Doxyfile  Output-SourceControl-Git.txt  README.md
.run/: engine_default.run.xml  engine_pyramid.run.xml  generator_box.run.xml  generator_comet.run.xml  generator_cone.run.xml  generator_sphere.run.xml  generator_test.run.xml  generator_test_matrix.run.xml  xml_generator.run.xml
demos/: solar_system.xml  test_ovni.xml
demos/models/: sphere.3d  sphere.normal  sphere.text  sphere_very_low_detail.3d  sphere_very_low_detail.normal  teapot.normal
demos/models/patches/: comet_teapot.patch
demos/show/: comet.xml  solar_system.xml  solar_system_pretty.xml
demos/tests/phase1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
demos/tests/phase2/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
demos/tests/phase3/: test_3_1.xml  test_3_2.xml
demos/tests/phase4/: test_4_7_test.xml
engine/: CMakeLists.txt
engine/include/interface/: Camera.h  display.h  perspective.h  scene.h  view.h
engine/include/lighting/: Directional.h  Light.h  Point.h  Spotlight.h
engine/include/model/: Color.h  LightingColors.h  MaterialColors.h  model.h  triangle.h
engine/include/model/transforms/: Rotate.h  Scale.h  Transform.h  Translate.h
engine/include/tinyxml2/: tinyxml2.h
engine/include/utils/: Group.h  coords.h  matrix.h  misc.h
engine/src/: engine.cpp
engine/src/interface/: Camera.cpp  Camera.h  display.cpp  display.h  perspective.cpp  scene.cpp  scene.h  view.cpp
engine/src/io/: model.cpp  model.h  triangle.cpp  triangle.h
engine/src/lighting/: Directional.cpp  Light.cpp  Point.cpp  Spotlight.cpp
engine/src/model/: Color.cpp  LightingColors.cpp  MaterialColors.cpp  model.cpp  model.h  triangle.cpp
engine/src/model/transforms/: Rotate.cpp  Scale.cpp  Transform.cpp  Translate.cpp
engine/src/tinyxml2/: tinyxml2.cpp
engine/src/utils/: Group.cpp  coords.cpp  matrix.cpp  misc.cpp
engine/test/: test.3d  test2.3d  xml_syntax.xml
engine/test/xml/: test_1_1.xml  test_1_2.xml  test_1_4.xml  test_1_5.xml
engine/test/xml/phase1/: generator  test_1_1.xml  test_1_3.xml
engine/test/xml/phase2/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_ovni.xml
generator/: CMakeLists.txt
generator/include/: Box.h  OVNI.h  Piramide.h  Plane.h  Sphere.h  utils.h
generator/include/curves/: Bezier.h  BezierSurface.h
generator/include/primitives/: Plane.h  Sphere.h
generator/include/utils/: Matrix.h  matrix_operations.h  utils.h
generator/src/: Bezier.cpp  Box.cpp  Ovni.cpp  Piramide.cpp  Plane.cpp  Sphere.cpp  main.cpp  point.h  utils.cpp  xml_generator.py
generator/src/complex_xml/: solar_system_generator.py  xml_creator.py  xml_generator.py
generator/src/curves/: Bezier.cpp  BezierSurface.cpp
generator/src/main/: main.cpp
generator/src/primitives/: Box.cpp  Ovni.h  Piramide.cpp  Plane.cpp  Sphere.cpp
generator/src/utils/: Matrix.cpp  matrix_operations.cpp  utils.cpp
generator/test/src/: main.cpp  matrix.cpp
generator/tests/: main.cpp
src/engine/: CMakeLists.txt  engine.cpp
srcDR/: Box.cpp  Box.h  main.cpp
srcDR/src/: Box.cpp  Sphere.cpp  main.cpp  point.cpp
